fix layout shift cuz of scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,7 @@
   }
 
   body {
-    @apply bg-background text-foreground font-manrope text-lg font-light tracking-tight;
+    @apply bg-background text-foreground font-manrope !min-w-full text-lg font-light tracking-tight;
   }
 
   svg {
